client-sdk/ts-web/core/playground/sample-envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 127.0.0.1
        port_value: 42280
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            virtual_hosts:
            - name: ts_dev_vh
              domains: ['*']
              routes:
              - match:
                  safe_regex:
                    google_re2: {}
                    regex: '/hela-gw\.(Registry/(GetNodes)|Staking/(Account|DebondingDelegationInfosFor|DelegationInfosFor|DelegationsTo|GetEvents)|Consensus/(SubmitTx|EstimateGas|GetSignerNonce|GetBlock|GetTransactionsWithResults|GetGenesisDocument|GetChainContext|WatchBlocks)|NodeController/(WaitReady))'
                route:
                  cluster: oasis_node_grpc
                  timeout: 0s
                  max_stream_duration:
                    grpc_timeout_header_max: 0s
              - match:
                  prefix: '/hela-gw'
                direct_response:
                  status: 404
                  body:
                    inline_string: 'You have to list every method you use in the envoy matcher.'
              cors:
                allow_origin_string_match:
                - exact: '*'
                allow_headers: content-type,x-grpc-web,x-user-agent
                expose_headers: grpc-status,grpc-message,grpc-status-details-bin
                max_age: '1728000'
          http_filters:
          - name: envoy.filters.http.grpc_web
          - name: envoy.filters.http.cors
          - name: envoy.filters.http.router
  clusters:
  - name: oasis_node_grpc
    connect_timeout: 0.25s
    load_assignment:
      cluster_name: cluster_0
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              pipe:
                path: /tmp/oasis-net-runner-sdk-core/net-runner/network/client-0/internal.sock
    http2_protocol_options: {}
layered_runtime:
  layers:
  - name: static
    static_layer:
      re2:
        max_program_size:
          error_level: 1000000
# admin:
#   access_log_path: /dev/null
#   address:
#     socket_address:
#       address: 127.0.0.1
#       port_value: 42281
